--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -22,8 +22,9 @@ body{background-color: black; color:#fff; font-family: 'Roboto', sans-serif; mar
 }
 
 .nav {
+  padding: 30px;
   margin-left: auto;
-  font-size: 1em;
+  font-size: 2em;
   float: right;
   /* margin-top: 5px; */
   margin-right: 25px;
@@ -66,11 +67,30 @@ body{background-color: black; color:#fff; font-family: 'Roboto', sans-serif; mar
       
     
   }
- 
+ .bodyOfWork{
+     padding-top: 80px;
+ }
     
 article{display:block; width:100%; text-align:right; height:100vh; margin:6em 0 0 0;}
 
-h1{font-size:10em;   animation: fadeIn 8s; font-weight:900; margin:0 0.1em; }
+@keyframes fadeIn {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+h1{
+    font-size:50px;
+    animation: fadeIn 8s;
+    font-weight:900; 
+    margin:0 0.1em; 
+}
+
+h2{
+    font-size:45px;
+    animation: fadeIn 8s;
+    font-weight:900; 
+    margin:0 0.1em; 
+}
 article p{width:50%; float:right; font-size:1.1em; margin:0 2em;}
 .clear{clear:both;}
 
